--- a/HTML/test.html
+++ b/HTML/test.html
@@ -10,7 +10,7 @@
     </script>
 </head>
 
-    <body  onkeydown="on_return();">
+    <body  onkeydown="AUTO_KeyClick();">
 
         用户名:<input type="text" id="usr">
     <br>
