--- a/HTML/Main.html
+++ b/HTML/Main.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script type="text/javascript" src="test.js"></script>
 </head>
-<body>
-    
+<body onload="Get_NowTime();">
+    <label style="color: brown;" id="date"> </label>
 </body>
 </html>
